--- a/src/app/components/sidebar-edit/sidebar-edit.component.html
+++ b/src/app/components/sidebar-edit/sidebar-edit.component.html
@@ -128,6 +128,19 @@
         {{'SIDEBAR_EDIT_ASPECTS_NODES' | translate}}
       </h5>
 
+      <!-- NP -->
+      <table class="table table-bordered" data-toggle="tooltip"
+             ngbTooltip="{{'SIDEBAR_EDIT_TT_PASSTHROUGH' | translate}}" placement="top">
+        <tr *ngFor="let np of dataService.selectedNetwork.mappings.nodesPassthrough; let npIndex = index">
+          <td>
+            <a [routerLink]="['', { outlets: {primary: ['mappings', 'np' +  npIndex]} }]" role="button">
+              <b>{{np.col}}</b>
+            </a>
+          </td>
+          <td>{{np.styleProperty}}</td>
+        </tr>
+      </table>
+
       <!-- ND -->
       <table
         *ngIf="dataService.selectedNetwork.mappings.nodesDiscrete.length > 0"
@@ -158,7 +171,8 @@
                 *ngFor="let is of dataService.selectedNetwork.mappings.nodesDiscrete|isByCol: nodeCol; let isIndex = index">
                 <td class="border-right">{{is}}</td>
 
-                <td *ngFor="let styleProperty of dataService.selectedNetwork.mappings.nodesDiscrete|stylePropertiesByCol: nodeCol">
+                <td
+                  *ngFor="let styleProperty of dataService.selectedNetwork.mappings.nodesDiscrete|stylePropertiesByCol: nodeCol">
                   {{dataService.selectedNetwork.mappings.nodesDiscrete|styleValueByColAndKey: nodeCol : styleProperty : is}}
                   <span
                     [ngStyle]="{'background-color': dataService.selectedNetwork.mappings.nodesDiscrete|styleValueByColAndKey: nodeCol : styleProperty : is}"
@@ -204,6 +218,18 @@
         {{'SIDEBAR_EDIT_ASPECTS_EDGES' | translate}}
       </h5>
 
+      <!-- EP -->
+      <table class="table table-bordered">
+        <tr *ngFor="let ep of dataService.selectedNetwork.mappings.edgesPassthrough; let epIndex = index">
+          <td>
+            <a [routerLink]="['', { outlets: {primary: ['mappings', 'np' +  epIndex]} }]" role="button">
+              <b>{{ep.col}}</b>
+            </a>
+          </td>
+          <td>{{ep.styleProperty}}</td>
+        </tr>
+      </table>
+
       <!-- ED -->
       <table
         *ngIf="dataService.selectedNetwork.mappings.edgesDiscrete.length > 0"
@@ -234,7 +260,8 @@
                 *ngFor="let is of dataService.selectedNetwork.mappings.edgesDiscrete|isByCol: edgeCol; let isIndex = index">
                 <td class="border-right">{{is}}</td>
 
-                <td *ngFor="let styleProperty of dataService.selectedNetwork.mappings.edgesDiscrete|stylePropertiesByCol: edgeCol">
+                <td
+                  *ngFor="let styleProperty of dataService.selectedNetwork.mappings.edgesDiscrete|stylePropertiesByCol: edgeCol">
                   {{dataService.selectedNetwork.mappings.edgesDiscrete|styleValueByColAndKey: edgeCol : styleProperty : is}}
                   <span
                     [ngStyle]="{'background-color': dataService.selectedNetwork.mappings.edgesDiscrete|styleValueByColAndKey: edgeCol : styleProperty : is}"
