--- a/src/app/components/parts/main-mappings-available-attributes/main-mappings-available-attributes.component.html
+++ b/src/app/components/parts/main-mappings-available-attributes/main-mappings-available-attributes.component.html
@@ -1,127 +1,252 @@
-<div class="table-responsive-md">
-
-  <table class="table table-borderless">
-    <thead class="border-bottom">
-    <tr>
-      <th colspan="3">{{ headline | translate}}</th>
-    </tr>
-    </thead>
-    <tbody>
-
-    <tr *ngFor="let attribute of attributeListFull; let attributeIndex = index;">
-      <td>{{ attribute.name }} </td>
-
-      <td class="float-right">
-
-        <span *ngIf="typeHint.ec || typeHint.nc">
-
-          <!-- more than one mapping exists -->
-          <div *ngIf="attribute.mapPointerC.length > 1">
-            <div class="btn-group" role="group">
-              <div class="btn-group" role="group">
-                <button aria-expanded="false" aria-haspopup="true" class="btn btn-outline-secondary dropdown-toggle"
-                        data-toggle="dropdown" id="cDetailsGroup" type="button">
-                  <fa-icon [icon]="faSearch"></fa-icon>
-                </button>
-                <div aria-labelledby="cDetailsGroup" class="dropdown-menu">
-                  <a *ngFor="let cDetail of attribute.mapPointerC; let i = index;"
-                     [routerLink]="['', { outlets: {primary: ['mappings', cDetail]} }]"
-                     class="dropdown-item">
-                    {{ dataService.getMappingByHintAndId(cDetail).styleProperty }}
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- exactly one mapping exists -->
-          <button *ngIf="attribute.mapPointerC.length === 1"
-                  [routerLink]="['', { outlets: {primary: ['mappings', attribute.mapPointerC[0]]} }]"
-                  class="btn btn-outline-secondary"
-                  data-toggle="tooltip"
-                  ngbTooltip="{{'MAIN_MAPPINGS_TT_MAP_DETAILS' | translate}}" placement="bottom"
-                  type="button">
-            <fa-icon [icon]="faSearch"></fa-icon>
-          </button>
-
-          <!-- new -->
-          <button
-            [routerLink]="['', { outlets: {primary: ['new', (typeHint.ec ? 'ec' : 'nc'), attributeIndex ]} }]"
-            class="btn btn-outline-success ml-2"
-            data-toggle="tooltip"
-            ngbTooltip="{{'MAIN_MAPPINGS_TT_NEW' | translate}}" placement="bottom"
-            type="button">
-            <fa-icon [icon]="faPlus"></fa-icon>
-          </button>
-        </span>
-
-        <span *ngIf="typeHint.nd || typeHint.ed">
-
-          <!-- exists -->
-          <button *ngIf="attribute.mapPointerD.length > 0"
-                  [routerLink]="['', { outlets: {primary: ['mappings', attribute.mapPointerD[0].substr(0,2), attribute.name]} }]"
-                  class="btn btn-outline-secondary"
-                  data-toggle="tooltip"
-                  ngbTooltip="{{'MAIN_MAPPINGS_TT_MAP_DETAILS' | translate}}" placement="bottom"
-                  type="button">
-            <fa-icon [icon]="faSearch"></fa-icon>
-          </button>
-
-          <!-- new -->
-          <button
-            [routerLink]="['', { outlets: {primary: ['new', (typeHint.ed ? 'ed' : 'nd'), attributeIndex ]} }]"
-            class="btn btn-outline-success ml-2"
-            data-toggle="tooltip"
-            ngbTooltip="{{'MAIN_MAPPINGS_TT_NEW' | translate}}" placement="bottom"
-            type="button">
-            <fa-icon [icon]="faPlus"></fa-icon>
-          </button>
-
-        </span>
-
-        <span *ngIf="typeHint.np || typeHint.ep">
-
-          <!-- more than one mapping exists -->
-          <div *ngIf="attribute.mapPointerP.length > 1">
-            <div class="btn-group" role="group">
-              <div class="btn-group" role="group">
-                <button aria-expanded="false" aria-haspopup="true" class="btn btn-outline-secondary dropdown-toggle"
-                        data-toggle="dropdown" id="pDetailsGroup" type="button">
-                  <fa-icon [icon]="faSearch"></fa-icon>
-                </button>
-                <div aria-labelledby="pDetailsGroup" class="dropdown-menu">
-                  <a *ngFor="let pDetail of attribute.mapPointerP; let i = index;"
-                     [routerLink]="['', { outlets: {primary: ['mappings', pDetail]} }]"
-                     class="dropdown-item">
-                    {{ dataService.getMappingByHintAndId(pDetail).styleProperty }}
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- exactly one mapping exists -->
-          <button *ngIf="attribute.mapPointerP.length === 1"
-                  [routerLink]="['', { outlets: {primary: ['mappings', attribute.mapPointerP[0]]} }]"
-                  class="btn btn-outline-secondary"
-                  data-toggle="tooltip"
-                  ngbTooltip="{{'MAIN_MAPPINGS_TT_MAP_DETAILS' | translate}}" placement="bottom"
-                  type="button">
-          <fa-icon [icon]="faSearch"></fa-icon>
-          </button>
-
-          <!-- new -->
-          <button
-            [routerLink]="['', { outlets: {primary: ['new', (typeHint.np ? 'np' : 'ep'), attributeIndex ]} }]"
-            class="btn btn-outline-success ml-2"
-            data-toggle="tooltip"
-            ngbTooltip="{{'MAIN_MAPPINGS_TT_NEW' | translate}}" placement="bottom"
-            type="button">
-            <fa-icon [icon]="faPlus"></fa-icon>
-          </button>
-
-        </span>
-
-    </tbody>
-  </table>
+<div class="d-flex">
+  <div><h5>{{headline | translate}}</h5></div>
 </div>
+
+<div class="d-flex flex-wrap" *ngFor="let attribute of attributeListFull; let attributeIndex = index">
+
+  <div class="flex-grow-1 mt-2">
+    {{attribute.name}}
+  </div>
+
+  <!-- continuous -->
+  <div class="ml-auto mt-2" *ngIf="typeHint.ec || typeHint.nc">
+
+    <!-- more than one exists -->
+    <span *ngIf="attribute.mapPointerC.length > 1">
+      <span class="btn-group" role="group">
+        <button aria-expanded="false" aria-haspopup="true" class="btn btn-outline-secondary dropdown-toggle"
+                data-toggle="dropdown" id="cDetailsGroup" type="button">
+          <fa-icon [icon]="faSearch"></fa-icon>
+        </button>
+        <span aria-labelledby="cDetailsGroup" class="dropdown-menu">
+          <a *ngFor="let cDetail of attribute.mapPointerC; let i = index;"
+             [routerLink]="['', { outlets: {primary: ['mappings', cDetail]} }]"
+             class="dropdown-item">
+            {{ dataService.getMappingByHintAndId(cDetail).styleProperty }}
+          </a>
+        </span>
+      </span>
+    </span>
+
+    <!-- exactly one exists -->
+    <button *ngIf="attribute.mapPointerC.length === 1"
+            [routerLink]="['', { outlets: {primary: ['mappings', attribute.mapPointerC[0]]} }]"
+            class="btn btn-outline-secondary"
+            data-toggle="tooltip"
+            ngbTooltip="{{'MAIN_MAPPINGS_TT_MAP_DETAILS' | translate}}" placement="bottom"
+            type="button">
+      <fa-icon [icon]="faSearch"></fa-icon>
+    </button>
+
+    <!-- add new -->
+    <button
+      [routerLink]="['', { outlets: {primary: ['new', (typeHint.ec ? 'ec' : 'nc'), attributeIndex ]} }]"
+      class="btn btn-outline-success ml-2"
+      data-toggle="tooltip"
+      ngbTooltip="{{'MAIN_MAPPINGS_TT_NEW' | translate}}" placement="bottom"
+      type="button">
+      <fa-icon [icon]="faPlus"></fa-icon>
+    </button>
+
+  </div>
+
+  <!-- discrete -->
+  <div class="ml-auto mt-2" *ngIf="typeHint.ed || typeHint.nd">
+
+    <!-- exists -->
+    <button *ngIf="attribute.mapPointerD.length > 0"
+            [routerLink]="['', { outlets: {primary: ['mappings', attribute.mapPointerD[0].substr(0,2), attribute.name]} }]"
+            class="btn btn-outline-secondary"
+            data-toggle="tooltip"
+            ngbTooltip="{{'MAIN_MAPPINGS_TT_MAP_DETAILS' | translate}}" placement="bottom"
+            type="button">
+      <fa-icon [icon]="faSearch"></fa-icon>
+    </button>
+
+    <!-- new -->
+    <button
+      [routerLink]="['', { outlets: {primary: ['new', (typeHint.ed ? 'ed' : 'nd'), attributeIndex ]} }]"
+      class="btn btn-outline-success ml-2"
+      data-toggle="tooltip"
+      ngbTooltip="{{'MAIN_MAPPINGS_TT_NEW' | translate}}" placement="bottom"
+      type="button">
+      <fa-icon [icon]="faPlus"></fa-icon>
+    </button>
+
+  </div>
+
+  <!-- passthrough -->
+  <div class="ml-auto mt-2" *ngIf="typeHint.ep || typeHint.np">
+
+    <!-- more than one mapping exists -->
+    <span *ngIf="attribute.mapPointerP.length > 1">
+      <span class="btn-group" role="group">
+        <button aria-expanded="false" aria-haspopup="true" class="btn btn-outline-secondary dropdown-toggle"
+                data-toggle="dropdown" id="pDetailsGroup" type="button">
+          <fa-icon [icon]="faSearch"></fa-icon>
+        </button>
+        <span aria-labelledby="pDetailsGroup" class="dropdown-menu">
+          <a *ngFor="let pDetail of attribute.mapPointerP; let i = index;"
+             [routerLink]="['', { outlets: {primary: ['mappings', pDetail]} }]"
+             class="dropdown-item">
+            {{ dataService.getMappingByHintAndId(pDetail).styleProperty }}
+          </a>
+        </span>
+      </span>
+    </span>
+
+    <!-- exactly one mapping exists -->
+    <button *ngIf="attribute.mapPointerP.length === 1"
+            [routerLink]="['', { outlets: {primary: ['mappings', attribute.mapPointerP[0]]} }]"
+            class="btn btn-outline-secondary"
+            data-toggle="tooltip"
+            ngbTooltip="{{'MAIN_MAPPINGS_TT_MAP_DETAILS' | translate}}" placement="bottom"
+            type="button">
+      <fa-icon [icon]="faSearch"></fa-icon>
+    </button>
+
+    <!-- new -->
+    <button
+      [routerLink]="['', { outlets: {primary: ['new', (typeHint.np ? 'np' : 'ep'), attributeIndex ]} }]"
+      class="btn btn-outline-success ml-2"
+      data-toggle="tooltip"
+      ngbTooltip="{{'MAIN_MAPPINGS_TT_NEW' | translate}}" placement="bottom"
+      type="button">
+      <fa-icon [icon]="faPlus"></fa-icon>
+    </button>
+
+  </div>
+
+</div>
+
+
+<!--<div class="table-responsive-md">-->
+
+<!--  <table class="table table-borderless">-->
+<!--    <thead class="border-bottom">-->
+<!--    <tr>-->
+<!--      <th colspan="3">{{ headline | translate}}</th>-->
+<!--    </tr>-->
+<!--    </thead>-->
+<!--    <tbody>-->
+
+<!--    <tr *ngFor="let attribute of attributeListFull; let attributeIndex = index;">-->
+<!--      <td>{{ attribute.name }} </td>-->
+
+<!--      <td class="float-right">-->
+
+<!--        &lt;!&ndash; continuous &ndash;&gt;-->
+<!--<div *ngIf="typeHint.ec || typeHint.nc">-->
+
+<!-- more than one mapping exists -->
+<!--  <div *ngIf="attribute.mapPointerC.length > 1">-->
+<!--    <div class="btn-group" role="group">-->
+<!--      <div class="btn-group" role="group">-->
+<!--        <button aria-expanded="false" aria-haspopup="true" class="btn btn-outline-secondary dropdown-toggle"-->
+<!--                data-toggle="dropdown" id="cDetailsGroup" type="button">-->
+<!--          <fa-icon [icon]="faSearch"></fa-icon>-->
+<!--        </button>-->
+<!--        <div aria-labelledby="cDetailsGroup" class="dropdown-menu">-->
+<!--          <a *ngFor="let cDetail of attribute.mapPointerC; let i = index;"-->
+<!--             [routerLink]="['', { outlets: {primary: ['mappings', cDetail]} }]"-->
+<!--             class="dropdown-item">-->
+<!--            {{ dataService.getMappingByHintAndId(cDetail).styleProperty }}-->
+<!--          </a>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+
+<!-- exactly one mapping exists -->
+<!--  <button *ngIf="attribute.mapPointerC.length === 1"-->
+<!--          [routerLink]="['', { outlets: {primary: ['mappings', attribute.mapPointerC[0]]} }]"-->
+<!--          class="btn btn-outline-secondary"-->
+<!--          data-toggle="tooltip"-->
+<!--          ngbTooltip="{{'MAIN_MAPPINGS_TT_MAP_DETAILS' | translate}}" placement="bottom"-->
+<!--          type="button">-->
+<!--    <fa-icon [icon]="faSearch"></fa-icon>-->
+<!--  </button>-->
+
+<!-- new -->
+<!--  <button-->
+<!--    [routerLink]="['', { outlets: {primary: ['new', (typeHint.ec ? 'ec' : 'nc'), attributeIndex ]} }]"-->
+<!--    class="btn btn-outline-success ml-2"-->
+<!--    data-toggle="tooltip"-->
+<!--    ngbTooltip="{{'MAIN_MAPPINGS_TT_NEW' | translate}}" placement="bottom"-->
+<!--    type="button">-->
+<!--    <fa-icon [icon]="faPlus"></fa-icon>-->
+<!--  </button>-->
+<!--</div>-->
+
+<!--        &lt;!&ndash; discrete &ndash;&gt;-->
+<!--        <div *ngIf="typeHint.nd || typeHint.ed">-->
+
+<!--          &lt;!&ndash; exists &ndash;&gt;-->
+<!--          <button *ngIf="attribute.mapPointerD.length > 0"-->
+<!--                  [routerLink]="['', { outlets: {primary: ['mappings', attribute.mapPointerD[0].substr(0,2), attribute.name]} }]"-->
+<!--                  class="btn btn-outline-secondary"-->
+<!--                  data-toggle="tooltip"-->
+<!--                  ngbTooltip="{{'MAIN_MAPPINGS_TT_MAP_DETAILS' | translate}}" placement="bottom"-->
+<!--                  type="button">-->
+<!--            <fa-icon [icon]="faSearch"></fa-icon>-->
+<!--          </button>-->
+
+<!--          &lt;!&ndash; new &ndash;&gt;-->
+<!--          <button-->
+<!--            [routerLink]="['', { outlets: {primary: ['new', (typeHint.ed ? 'ed' : 'nd'), attributeIndex ]} }]"-->
+<!--            class="btn btn-outline-success ml-2"-->
+<!--            data-toggle="tooltip"-->
+<!--            ngbTooltip="{{'MAIN_MAPPINGS_TT_NEW' | translate}}" placement="bottom"-->
+<!--            type="button">-->
+<!--            <fa-icon [icon]="faPlus"></fa-icon>-->
+<!--          </button>-->
+
+<!--        </div>-->
+
+<!--        &lt;!&ndash; passthrough &ndash;&gt;-->
+<!--        <div *ngIf="typeHint.np || typeHint.ep">-->
+
+<!--          &lt;!&ndash; more than one mapping exists &ndash;&gt;-->
+<!--          <div *ngIf="attribute.mapPointerP.length > 1">-->
+<!--            <div class="btn-group" role="group">-->
+<!--              <div class="btn-group" role="group">-->
+<!--                <button aria-expanded="false" aria-haspopup="true" class="btn btn-outline-secondary dropdown-toggle"-->
+<!--                        data-toggle="dropdown" id="pDetailsGroup" type="button">-->
+<!--                  <fa-icon [icon]="faSearch"></fa-icon>-->
+<!--                </button>-->
+<!--                <div aria-labelledby="pDetailsGroup" class="dropdown-menu">-->
+<!--                  <a *ngFor="let pDetail of attribute.mapPointerP; let i = index;"-->
+<!--                     [routerLink]="['', { outlets: {primary: ['mappings', pDetail]} }]"-->
+<!--                     class="dropdown-item">-->
+<!--                    {{ dataService.getMappingByHintAndId(pDetail).styleProperty }}-->
+<!--                  </a>-->
+<!--                </div>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--          </div>-->
+
+<!--          &lt;!&ndash; exactly one mapping exists &ndash;&gt;-->
+<!--          <button *ngIf="attribute.mapPointerP.length === 1"-->
+<!--                  [routerLink]="['', { outlets: {primary: ['mappings', attribute.mapPointerP[0]]} }]"-->
+<!--                  class="btn btn-outline-secondary"-->
+<!--                  data-toggle="tooltip"-->
+<!--                  ngbTooltip="{{'MAIN_MAPPINGS_TT_MAP_DETAILS' | translate}}" placement="bottom"-->
+<!--                  type="button">-->
+<!--          <fa-icon [icon]="faSearch"></fa-icon>-->
+<!--          </button>-->
+
+<!--          &lt;!&ndash; new &ndash;&gt;-->
+<!--          <button-->
+<!--            [routerLink]="['', { outlets: {primary: ['new', (typeHint.np ? 'np' : 'ep'), attributeIndex ]} }]"-->
+<!--            class="btn btn-outline-success ml-2"-->
+<!--            data-toggle="tooltip"-->
+<!--            ngbTooltip="{{'MAIN_MAPPINGS_TT_NEW' | translate}}" placement="bottom"-->
+<!--            type="button">-->
+<!--            <fa-icon [icon]="faPlus"></fa-icon>-->
+<!--          </button>-->
+
+<!--        </div>-->
+
+<!--    </tbody>-->
+<!--  </table>-->
+<!--</div>-->
