--- a/src/app/components/main-mappings/main-mappings.component.html
+++ b/src/app/components/main-mappings/main-mappings.component.html
@@ -34,49 +34,52 @@
   <div
     *ngIf="(dataService.selectedDiscreteMapping && (dataService.selectedTypeHint.nd || dataService.selectedTypeHint.ed))">
 
-    <table class="table table-bordered">
-      <thead>
-      <tr>
-        <th>{{dataService.selectedDiscreteMappingProperty}}</th>
-        <th
-          *ngFor="let is of dataService.selectedDiscreteMapping|isByCol : dataService.selectedDiscreteMappingProperty">
-          {{is}}
-        </th>
-        <th colspan="2">&nbsp;</th>
-      </tr>
-      </thead>
+    <div class="table-responsive">
 
-      <tbody>
-      <tr [ngClass]="dataService.selectedForDeletion === styleProperty ? 'table-danger' : ''"
-          *ngFor="let styleProperty of dataService.selectedDiscreteMapping|stylePropertiesByCol : dataService.selectedDiscreteMappingProperty; let styleIndex = index">
-        <td>{{styleProperty}}</td>
+      <table class="table table-bordered">
+        <thead>
+        <tr>
+          <th>{{dataService.selectedDiscreteMappingProperty}}</th>
+          <th
+            *ngFor="let is of dataService.selectedDiscreteMapping|isByCol : dataService.selectedDiscreteMappingProperty">
+            {{is}}
+          </th>
+          <th colspan="2">&nbsp;</th>
+        </tr>
+        </thead>
 
-        <td
-          *ngFor="let is of dataService.selectedDiscreteMapping|isByCol : dataService.selectedDiscreteMappingProperty">
+        <tbody>
+        <tr [ngClass]="dataService.selectedForDeletion === styleProperty ? 'table-danger' : ''"
+            *ngFor="let styleProperty of dataService.selectedDiscreteMapping|stylePropertiesByCol : dataService.selectedDiscreteMappingProperty; let styleIndex = index">
+          <td>{{styleProperty}}</td>
+
+          <td
+            *ngFor="let is of dataService.selectedDiscreteMapping|isByCol : dataService.selectedDiscreteMappingProperty">
           <span
             #tmp>{{dataService.selectedDiscreteMapping|styleValueByColAndKey : dataService.selectedDiscreteMappingProperty : styleProperty : is}}</span>
-          <span *ngIf="tmp.innerHTML.startsWith('#')" class="badge badge-pill border"
-                [ngStyle]="{'background-color': dataService.selectedDiscreteMapping|styleValueByColAndKey : dataService.selectedDiscreteMappingProperty : styleProperty : is}">
+            <span *ngIf="tmp.innerHTML.startsWith('#')" class="badge badge-pill border"
+                  [ngStyle]="{'background-color': dataService.selectedDiscreteMapping|styleValueByColAndKey : dataService.selectedDiscreteMappingProperty : styleProperty : is}">
             &nbsp;
           </span>
-        </td>
+          </td>
 
-        <td>
-          <button class="btn btn-outline-warning" [disabled]="true">
-            <fa-icon [icon]="faEdit"></fa-icon>
-          </button>
-        </td>
-        <td>
-          <button class="btn btn-outline-danger" (click)="toggleSingleRemoveDialogue(styleIndex)">
-            <fa-icon [icon]="faTrash"></fa-icon>
-          </button>
-        </td>
+          <td>
+            <button class="btn btn-outline-warning" [disabled]="true">
+              <fa-icon [icon]="faEdit"></fa-icon>
+            </button>
+          </td>
+          <td>
+            <button class="btn btn-outline-danger" (click)="toggleSingleRemoveDialogue(styleIndex)">
+              <fa-icon [icon]="faTrash"></fa-icon>
+            </button>
+          </td>
 
-      </tr>
-      </tbody>
+        </tr>
+        </tbody>
 
-    </table>
+      </table>
 
+    </div>
     <button (click)="toggleGlobalRemoveDialogue()"
             class="btn btn-block btn-outline-danger"
             data-toggle="tooltip" ngbTooltip="{{'MAIN_MAPPINGS_TT_DELETE' | translate}}"
