--- a/src/app/components/sidebar-manage/sidebar-manage.component.html
+++ b/src/app/components/sidebar-manage/sidebar-manage.component.html
@@ -18,7 +18,9 @@
            role="button">
           <fa-icon [icon]="faPaintBrush"></fa-icon>
         </a>
-        <a (click)="reconvert(network.id)" class="btn btn-sm btn-outline-secondary mr-1" data-toggle="tooltip"
+
+        <!-- todo rework to download cx -->
+        <a (click)="downloadNetwork(network.id)" class="btn btn-sm btn-outline-secondary mr-1" data-toggle="tooltip"
            ngbTooltip="{{'SIDEBAR_MANAGE_TT_DOWNLOAD'|translate}}" placement="left"
            role="button">
           <fa-icon [icon]="faFileDownload"></fa-icon>
