[WIP] creating a passthrough mapping needs some more tweaks, e.g. already existing checks

--- a/src/app/components/main-mappings-new/main-mappings-new.component.html
+++ b/src/app/components/main-mappings-new/main-mappings-new.component.html
@@ -25,6 +25,12 @@
          id="newNc" role="tab">{{'MAIN_MAPPINGS_NEW_TYPE_NC' | translate}}</a>
     </li>
     <li class="nav-item">
+      <a [ngClass]="{active: typeHint.np, disabled: !typeHint.np}" aria-controls="newNp" aria-selected="false"
+         class="nav-link" data-toggle="pill"
+         href="#newNpForm"
+         id="newNp" role="tab">{{'MAIN_MAPPINGS_NEW_TYPE_NP' | translate}}</a>
+    </li>
+    <li class="nav-item">
       <a [ngClass]="{active: typeHint.ed, disabled: !typeHint.ed}" aria-controls="newEd" aria-selected="false"
          class="nav-link" data-toggle="pill"
          href="#newEdForm"
@@ -35,6 +41,12 @@
          class="nav-link" data-toggle="pill"
          href="#newEcForm"
          id="newEc" role="tab">{{'MAIN_MAPPINGS_NEW_TYPE_EC' | translate}}</a>
+    </li>
+    <li class="nav-item">
+      <a [ngClass]="{active: typeHint.ep, disabled: !typeHint.ep}" aria-controls="newEp" aria-selected="false"
+         class="nav-link" data-toggle="pill"
+         href="#newEpForm"
+         id="newEp" role="tab">{{'MAIN_MAPPINGS_NEW_TYPE_EP' | translate}}</a>
     </li>
   </ul>
 
@@ -145,6 +157,49 @@
 
     </div>
 
+    <!-- todo NEW: NodesPassthrough -->
+    <div *ngIf="typeHint.np" [ngClass]="{active: typeHint.np}" aria-labelledby="newNp" class="tab-pane fade show"
+         id="newNpForm"
+         role="tabpanel">
+      <span *ngIf="isEdit then editHeadlineNp else newHeadlineNp"></span>
+      <ng-template #editHeadlineNp><h3>{{'MAIN_MAPPINGS_EDIT_NP' | translate}}</h3></ng-template>
+      <ng-template #newHeadlineNp><h3>{{'MAIN_MAPPINGS_NEW_NP' | translate}}</h3></ng-template>
+
+      <!-- ALERT: mapping already exists -->
+      <app-alert-mapping-already-exists *ngIf="!isEdit"
+                                        [isNode]="true"
+                                        [isDiscrete]="false"
+                                        [propertyToMap]="propertyToMap"
+                                        [styleProperty]="styleProperty">
+      </app-alert-mapping-already-exists>
+
+      <!-- ALERT: distribution -->
+      <div class="alert alert-info" role="alert">
+
+        <button (click)="toggleDistributionChart(!showDistribution)" class="btn btn-sm btn-outline-secondary mr-4"
+                data-toggle="tooltip"
+                ngbTooltip="{{'MAIN_MAPPINGS_NEW_TT_DISTRIBUTION' | translate}}"
+                placement="right"
+                type="button">
+          <fa-icon [icon]="faChartBar"></fa-icon>
+        </button>
+        {{'MAIN_MAPPINGS_NEW_SELECTED_ATTRIBUTE' | translate}}: <b>{{propertyToMap.name}}</b>
+      </div>
+
+      <!-- distribution chart -->
+      <app-chart *ngIf="showDistribution" [chartObject]="chartObject"
+                 [widthPercent]="100"></app-chart>
+
+      <!-- FORM -->
+      <app-main-mappings-new-form *ngIf="passthroughMapping"
+                                  (stylePropertyEmitter)="setStyleProperty($event)"
+                                  [isEdit]="isEdit"
+                                  [typeHint]="typeHint"
+                                  [propertyToMap]="propertyToMap"
+                                  [mappingPassthrough]="passthroughMapping"></app-main-mappings-new-form>
+
+    </div>
+
     <!-- NEW: EdgesDiscrete -->
     <div *ngIf="typeHint.ed" [ngClass]="{active: typeHint.ed}" aria-labelledby="newEd" class="tab-pane fade show"
          id="newEdForm"
@@ -244,9 +299,10 @@
                                   (stylePropertyEmitter)="setStyleProperty($event)"
                                   [isEdit]="isEdit"
                                   [typeHint]="typeHint"
-                                  [mapId]="currentMappingId"
                                   [propertyToMap]="propertyToMap"></app-main-mappings-new-form>
     </div>
+
+    <!-- todo NEW: EdgesPassthrough -->
 
   </div>
 
